2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Don't declare static const int in declarations
	* src/network/bsdnet/connection.hh: Use enums.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Remove version.hh.in
	* src/version.hh.in: Remove.
	We use the one in build-aux.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	Report file names in parse errors
	* src/parser/uparser.cc, src/parser/uparser.hh (filename_): New.
	* src/parser/bison/ugrammar.y: Use it to initialize @$.
	* tests/check-file: Normalize the path of included files
	to avoid difference due to builddir, srcdir etc.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	Nuke a few useless includes
	I have a small computer, and I'm tired of wasted cycles.
	* src/fwd.hh: Complete and sort.
	* src/parser/bison/ugrammar.y, src/ucommand.cc, src/uconnection.hh,
	* src/ueventhandler.cc, src/uexpression.cc, src/ughostconnection.cc,
	* src/uobj.cc, src/userver.cc, src/userver.hh:
	Remove a few includes from userver.hh, since it's included by
	virtually all the files.
	Adjust the missing dependencies in *.cc files.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	Minor parser cleanups
	* src/parser/uparser.cc, src/parser/uparser.hh (parser_type): New.
	Use it.
	(uflexer_): Rename as...
	(scanner_): this.
	(scan): Remove.
	* src/parser/bison/ugrammar.y: Adjust: directly use the UParser's
	scanner.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	More %printer
	* src/parser/bison/ugrammar.y: For <val>.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	More concrete tokens
	* src/parser/bison/ugrammar.y: here.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	Add tests for load
	* src/console.cc: Support URBI_PATH.
	* src/userver.cc (loadFile): Reduce scopes.
	* tests/Makefile.am (TEST_ENVIRONMENT): New.
	* tests/check-file: Also accept XXXXXXX "prompts".
	Pass URBI_PATH to find files to load.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Remove UCommand_LOAD